Add command status, again (#247)
- New table device_command_requests, rows inserted when requests are first made
- Display the most recent commands issues to each device
- Read command status updates from topic.task.status
