# models/integrations.go
@@ -125,10 +125,12 @@ var IntegrationWhere = struct {
 
 // IntegrationRels is where relationship names are stored.
 var IntegrationRels = struct {
+	DeviceCommandRequests     string
 	DeviceIntegrations        string
 	UserDeviceAPIIntegrations string
 	UserDeviceData            string
 }{
+	DeviceCommandRequests:     "DeviceCommandRequests",
 	DeviceIntegrations:        "DeviceIntegrations",
 	UserDeviceAPIIntegrations: "UserDeviceAPIIntegrations",
 	UserDeviceData:            "UserDeviceData",
@@ -136,6 +138,7 @@ var IntegrationRels = struct {
 
 // integrationR is where relationships are stored.
 type integrationR struct {
+	DeviceCommandRequests     DeviceCommandRequestSlice     `boil:"DeviceCommandRequests" json:"DeviceCommandRequests" toml:"DeviceCommandRequests" yaml:"DeviceCommandRequests"`
 	DeviceIntegrations        DeviceIntegrationSlice        `boil:"DeviceIntegrations" json:"DeviceIntegrations" toml:"DeviceIntegrations" yaml:"DeviceIntegrations"`
 	UserDeviceAPIIntegrations UserDeviceAPIIntegrationSlice `boil:"UserDeviceAPIIntegrations" json:"UserDeviceAPIIntegrations" toml:"UserDeviceAPIIntegrations" yaml:"UserDeviceAPIIntegrations"`
 	UserDeviceData            UserDeviceDatumSlice          `boil:"UserDeviceData" json:"UserDeviceData" toml:"UserDeviceData" yaml:"UserDeviceData"`
@@ -144,6 +147,13 @@ type integrationR struct {
 // NewStruct creates a new relationship struct
 func (*integrationR) NewStruct() *integrationR {
 	return &integrationR{}
+}
+
+func (r *integrationR) GetDeviceCommandRequests() DeviceCommandRequestSlice {
+	if r == nil {
+		return nil
+	}
+	return r.DeviceCommandRequests
 }
 
 func (r *integrationR) GetDeviceIntegrations() DeviceIntegrationSlice {
@@ -456,6 +466,20 @@ func (q integrationQuery) Exists(ctx context.Context, exec boil.ContextExecutor)
 	return count > 0, nil
 }
 
+// DeviceCommandRequests retrieves all the device_command_request's DeviceCommandRequests with an executor.
+func (o *Integration) DeviceCommandRequests(mods ...qm.QueryMod) deviceCommandRequestQuery {
+	var queryMods []qm.QueryMod
+	if len(mods) != 0 {
+		queryMods = append(queryMods, mods...)
+	}
+
+	queryMods = append(queryMods,
+		qm.Where("\"devices_api\".\"device_command_requests\".\"integration_id\"=?", o.ID),
+	)
+
+	return DeviceCommandRequests(queryMods...)
+}
+
 // DeviceIntegrations retrieves all the device_integration's DeviceIntegrations with an executor.
 func (o *Integration) DeviceIntegrations(mods ...qm.QueryMod) deviceIntegrationQuery {
 	var queryMods []qm.QueryMod
@@ -496,6 +520,120 @@ func (o *Integration) UserDeviceData(mods ...qm.QueryMod) userDeviceDatumQuery {
 	)
 
 	return UserDeviceData(queryMods...)
+}
+
+// LoadDeviceCommandRequests allows an eager lookup of values, cached into the
+// loaded structs of the objects. This is for a 1-M or N-M relationship.
+func (integrationL) LoadDeviceCommandRequests(ctx context.Context, e boil.ContextExecutor, singular bool, maybeIntegration interface{}, mods queries.Applicator) error {
+	var slice []*Integration
+	var object *Integration
+
+	if singular {
+		var ok bool
+		object, ok = maybeIntegration.(*Integration)
+		if !ok {
+			object = new(Integration)
+			ok = queries.SetFromEmbeddedStruct(&object, &maybeIntegration)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", object, maybeIntegration))
+			}
+		}
+	} else {
+		s, ok := maybeIntegration.(*[]*Integration)
+		if ok {
+			slice = *s
+		} else {
+			ok = queries.SetFromEmbeddedStruct(&slice, maybeIntegration)
+			if !ok {
+				return errors.New(fmt.Sprintf("failed to set %T from embedded struct %T", slice, maybeIntegration))
+			}
+		}
+	}
+
+	args := make([]interface{}, 0, 1)
+	if singular {
+		if object.R == nil {
+			object.R = &integrationR{}
+		}
+		args = append(args, object.ID)
+	} else {
+	Outer:
+		for _, obj := range slice {
+			if obj.R == nil {
+				obj.R = &integrationR{}
+			}
+
+			for _, a := range args {
+				if a == obj.ID {
+					continue Outer
+				}
+			}
+
+			args = append(args, obj.ID)
+		}
+	}
+
+	if len(args) == 0 {
+		return nil
+	}
+
+	query := NewQuery(
+		qm.From(`devices_api.device_command_requests`),
+		qm.WhereIn(`devices_api.device_command_requests.integration_id in ?`, args...),
+	)
+	if mods != nil {
+		mods.Apply(query)
+	}
+
+	results, err := query.QueryContext(ctx, e)
+	if err != nil {
+		return errors.Wrap(err, "failed to eager load device_command_requests")
+	}
+
+	var resultSlice []*DeviceCommandRequest
+	if err = queries.Bind(results, &resultSlice); err != nil {
+		return errors.Wrap(err, "failed to bind eager loaded slice device_command_requests")
+	}
+
+	if err = results.Close(); err != nil {
+		return errors.Wrap(err, "failed to close results in eager load on device_command_requests")
+	}
+	if err = results.Err(); err != nil {
+		return errors.Wrap(err, "error occurred during iteration of eager loaded relations for device_command_requests")
+	}
+
+	if len(deviceCommandRequestAfterSelectHooks) != 0 {
+		for _, obj := range resultSlice {
+			if err := obj.doAfterSelectHooks(ctx, e); err != nil {
+				return err
+			}
+		}
+	}
+	if singular {
+		object.R.DeviceCommandRequests = resultSlice
+		for _, foreign := range resultSlice {
+			if foreign.R == nil {
+				foreign.R = &deviceCommandRequestR{}
+			}
+			foreign.R.Integration = object
+		}
+		return nil
+	}
+
+	for _, foreign := range resultSlice {
+		for _, local := range slice {
+			if local.ID == foreign.IntegrationID {
+				local.R.DeviceCommandRequests = append(local.R.DeviceCommandRequests, foreign)
+				if foreign.R == nil {
+					foreign.R = &deviceCommandRequestR{}
+				}
+				foreign.R.Integration = local
+				break
+			}
+		}
+	}
+
+	return nil
 }
 
 // LoadDeviceIntegrations allows an eager lookup of values, cached into the
@@ -837,6 +975,59 @@ func (integrationL) LoadUserDeviceData(ctx context.Context, e boil.ContextExecut
 		}
 	}
 
+	return nil
+}
+
+// AddDeviceCommandRequests adds the given related objects to the existing relationships
+// of the integration, optionally inserting them as new records.
+// Appends related to o.R.DeviceCommandRequests.
+// Sets related.R.Integration appropriately.
+func (o *Integration) AddDeviceCommandRequests(ctx context.Context, exec boil.ContextExecutor, insert bool, related ...*DeviceCommandRequest) error {
+	var err error
+	for _, rel := range related {
+		if insert {
+			rel.IntegrationID = o.ID
+			if err = rel.Insert(ctx, exec, boil.Infer()); err != nil {
+				return errors.Wrap(err, "failed to insert into foreign table")
+			}
+		} else {
+			updateQuery := fmt.Sprintf(
+				"UPDATE \"devices_api\".\"device_command_requests\" SET %s WHERE %s",
+				strmangle.SetParamNames("\"", "\"", 1, []string{"integration_id"}),
+				strmangle.WhereClause("\"", "\"", 2, deviceCommandRequestPrimaryKeyColumns),
+			)
+			values := []interface{}{o.ID, rel.ID}
+
+			if boil.IsDebug(ctx) {
+				writer := boil.DebugWriterFrom(ctx)
+				fmt.Fprintln(writer, updateQuery)
+				fmt.Fprintln(writer, values)
+			}
+			if _, err = exec.ExecContext(ctx, updateQuery, values...); err != nil {
+				return errors.Wrap(err, "failed to update foreign table")
+			}
+
+			rel.IntegrationID = o.ID
+		}
+	}
+
+	if o.R == nil {
+		o.R = &integrationR{
+			DeviceCommandRequests: related,
+		}
+	} else {
+		o.R.DeviceCommandRequests = append(o.R.DeviceCommandRequests, related...)
+	}
+
+	for _, rel := range related {
+		if rel.R == nil {
+			rel.R = &deviceCommandRequestR{
+				Integration: o,
+			}
+		} else {
+			rel.R.Integration = o
+		}
+	}
 	return nil
 }
 
